<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <!--tools:context=""-->
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@drawable/my_image"
            tools:context="com.retreat.shebuel.spitraining.Activities.Profile"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="50sp">
                <ImageView
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:src="@drawable/my_image2"
                    app:srcCompat="@drawable/my_image2"
                    android:layout_marginTop="45dp"
                    android:id="@+id/imageView"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="50sp"
                    android:textColor="#FFFF00"
                    android:textSize="20sp"
                    android:id="@+id/textView"
                    android:text="@string/name_profile" />

                <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF00"
                    android:textSize="20sp"
                    android:id="@+id/nameText" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">
                <TextView
                    android:text="@string/doj_profile"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="50sp"
                    android:id="@+id/textView5"
                    android:textSize="20sp" />

                <TextView
                    android:text="00-00-0000"
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dojText" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">
                <TextView
                    android:text="@string/department_profile"
                    android:textSize="20dp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:paddingRight="50sp"
                    android:id="@+id/textView7" />

                <TextView
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deptText" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">
                <TextView
                    android:text="@string/designation_profile"
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20sp"
                    android:paddingEnd="50sp"
                    android:id="@+id/textView9" />

                <TextView
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/desigText" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp">
                <TextView
                    android:text="@string/site_profile"
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20sp"
                    android:paddingEnd="50sp"
                    android:id="@+id/textView11" />

                <TextView
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="#FFFF00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/siteText" />

            </TableRow>
            <TextView
                android:text="@string/change_password"
                android:paddingTop="40sp"
                android:textSize="20sp"
                android:textColor="#FFFF00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/changePassword"
                android:textAlignment="center"/>
        </TableLayout>

    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_nav_example"
        app:menu="@menu/activity_nav_example_drawer" />

</android.support.v4.widget.DrawerLayout>
